log
Sat, May 17, 2025  4:58:30 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:23: error: unused variable 'j' [-Werror=unused-variable]
                 int i,j;
                       ^
cc1.exe: all warnings being treated as errors
3f0e54c
